# CRM-customization

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/crm-discovery/: SKILL.md
.claude/skills/crm-start/: SKILL.md
.claude/skills/crm-status/: SKILL.md
docs/: guided_experience.md  legacy_private_app_setup.md  research_registry.yaml  supervised_agent_runbook.md
src/crm_agent/: __init__.py  apply.py  audit.py  audit_registry.py  change_plan.py  cli.py  constants.py  design.py  discovery.py  errors.py  hubspot.py  intake.py  io.py  models.py  onboarding.py  planner.py  reconcile.py  research.py  session.py  settings.py  source_context.py  validation.py  verify.py
tests/: test_audit_reconcile.py  test_cli_smoke.py  test_guided_start.py  test_manifest_workflow.py  test_onboarding.py  test_source_context.py  test_validation.py  test_verify.py
