[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hubspot-crm-agent"
version = "0.1.0"
description = "Supervised toolkit for safely parameterizing HubSpot CRM/Sales portals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Customization CRM maintainers" }]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
crm-agent = "crm_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/crm_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/crm_agent/cli.py" = ["B008"]
